# RenameFiles

./: .gitignore  README.md  README_TO_CREATE_AN_INSTALLABLE_EXECUTABLE.md  README_TO_CREATE_A_USER_INTERFACE.md  README_TO_USE_AND_CREATE_PYTHON_PACKAGES_EASILY.md  pyproject.toml
src/: __main__.py
src/RenameFiles/: __main__.py
src/RenameFiles/core/: rename_files.py
src/core/: custom_widgets.py  rename_files.py
