[tool.poetry]
name = "RenameFiles"
version = "1.0.0"
description = "Renames files and optionaly moves them from one place to another."
authors = [
  { name="Aurèle Boussard", email="aurele.boussard@gmail.com" }
]
license = "GNU General Public License v3.0"
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
PySide6 = "^6.6.0"

[tool.poetry.group.dev.dependencies]
h5py = "^3.10.0"
typing-extensions = "^4.8.0"
wheel = "^0.41.3"
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/Aurele-B/RenameFiles"