[tool.poetry]
name = "RenameFiles"
version = "1.0.0"
description = "Renames files and optionaly moves them from one place to another."
authors = ["Aurèle Boussard"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.scripts]
RenameFiles = "renamefiles.__main__:run_rename_files"

[tool.poetry.dependencies]
python = ">3.8,<3.13"
PySide6 = "^6.5.2"
pyinstaller = "^6.1.0"
setuptools = ">=70.0.0"

[tool.poetry.group.dev.dependencies]
h5py = "^3.10.0"
typing-extensions = "^4.8.0"
wheel = "^0.41.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/Aurele-B/RenameFiles"
