[project]
name = "renamefiles"
version = "0.1.0"
description = "is a learning support for 3 python skills"
authors = [
    {name = "Aurele-B",email = "aurele.boussard@gmail.com"}
]
license = {text = "GNU3"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyside6 (>=6.9.0,<7.0.0)",
    "pyinstaller (>=6.13.0,<7.0.0)",
    "setuptools (>=80.7.1,<81.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
h5py = "^3.13.0"
typing-extensions = "^4.13.2"
wheel = "^0.45.1"

[tool.poetry.scripts]
RenameFiles = "renamefiles.__main__:run_rename_files"
